--- a/src/components/SimpleTodos/index.css
+++ b/src/components/SimpleTodos/index.css
@@ -1,1 +1,19 @@
-/* Write your CSS here */
+.bg-container {
+  background-color: #ffc2a0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 25px;
+}
+.card-container {
+  border-style: solid;
+  background-color: white;
+  padding: 8px;
+  border-width: 0px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+}
+.heading {
+  align-self: center;
+}
