--- a/src/components/TodoItem/index.css
+++ b/src/components/TodoItem/index.css
@@ -1,1 +1,21 @@
-/* Write your CSS here */
+.list-container {
+  list-style-type: none;
+  display: flex;
+  padding: 12px;
+}
+.title {
+  font-weight: bold;
+  margin-right: auto;
+  margin-top: 12px;
+}
+.button {
+  align-self: flex-end;
+  cursor: pointer;
+  outline: none;
+  background-color: transparent;
+  color: #ff0b37;
+  border-color: #ff0b37;
+  border-width: 0.5px;
+  border-radius: 5px;
+  padding: 3px;
+}
